<resources>
    <string name="app_name">AndroidAppTemplate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="atualizacao_de_usuario">Atualização de Usuário</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="endere_o">Endereço</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar a Senha</string>
    <string name="atualizar">Atualizar</string>
    <string name="sair">Sair</string>
</resources>